package cars.Exo1;

public class Jeep extends Car {
    public Jeep() {
    }

    public String honk() {
        return "Klaxon : Buuuuuup Buuuuuup !";
    }

    public String speedUp() {
        return "Acceleration : Jiiiiiiiiionnnnnn !";
    }
}
